# kursovik

kursovik/Snake_con_1/: CMakeLists.txt  const.h  main.cpp  snake.cpp
kursovik/Snake_con_2/: CMakeLists.txt  const.h  game.h  main.cpp  snake.cpp
kursovik/build-Snake_con_1-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
kursovik/build-Snake_con_2-Desktop-Debug/: CMakeCache.txt  Makefile  Snake_con_2  cmake_install.cmake
kursovik/Задания 1-6-20230108/: .~lock.Задание (игра Змейка)_2 (змейка на экране)_3.docx#  .~lock.Курсовая работа (процедурное программирование С100-С110).docx#  .~lock.Подсказки к заданию (игра Змейка)_5 (функции без параметров)_2.docx#  Задание (игра Змейка)_1 (клавиатурный ввод)_3.docx  Задание (игра Змейка)_2 (змейка на экране)_3.docx  Задание (игра Змейка)_3 (одномерные массивы)_3.docx  Задание (игра Змейка)_4 (+еда)_3.docx  Задание (игра Змейка)_5 (функции без параметров)_3.docx  Задание (игра Змейка)_6 (функции с параметрами)_3.docx  Курсовая работа (процедурное программирование С100-С110).docx  Отчет по курсовой работа (С100-С110)_Фамилия.docx  Подсказки к заданию (игра Змейка)_5 (функции без параметров)_2.docx  Подсказки к заданию (игра Змейка)_6 (функции с параметрами)_2.docx
kursovik/Задания по курсовой работе (Часть 2)-20230108/: Задание (игра Змейка)_10 (структуры)_3.docx  Задание (игра Змейка)_7 (двумерный встроенный массив поля)_3.docx  Задание (игра Змейка)_8 (двумерный динамический массив поля)_3.docx  Задание (игра Змейка)_9 (структуры)_3.docx
(+18 files in other folders)
